--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^16.0.3",
     "@angular/compiler": "11.0.5",
     "@angular/core": "11.0.5",
     "@angular/forms": "11.0.5",
     "@angular/http": "7.2.16",
     "@angular/localize": "^11.0.5",
+    "@angular/material": "^16.0.3",
     "@angular/platform-browser": "11.0.5",
     "@angular/platform-browser-dynamic": "11.0.5",
     "@angular/router": "11.0.5",
@@ -34,6 +36,7 @@
     "devextreme": "19.2.6",
     "devextreme-angular": "19.2.6",
     "dropzone": "5.7.2",
+    "flowbite": "^1.6.5",
     "fullcalendar": "5.3.2",
     "jquery": "^1.9.1",
     "list.js": "1.5.0",
@@ -53,7 +56,7 @@
     "stream": "0.0.2",
     "sweetalert2": "10.13.0",
     "tslib": "1.10.0",
-    "zone.js": "0.10.2"
+    "zone.js": "0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.900.3",
@@ -65,6 +68,7 @@
     "@types/jasmine": "3.5.7",
     "@types/jasminewd2": "2.0.8",
     "@types/node": "13.7.6",
+    "autoprefixer": "^10.4.14",
     "codelyzer": "5.2.1",
     "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "4.2.1",
@@ -73,9 +77,17 @@
     "karma-coverage-istanbul-reporter": "2.1.1",
     "karma-jasmine": "3.1.1",
     "karma-jasmine-html-reporter": "1.5.2",
+    "postcss": "^8.4.24",
     "protractor": "5.4.3",
+    "tailwindcss": "^3.3.2",
     "ts-node": "8.6.2",
     "tslint": "6.0.0",
     "typescript": "4.0.3"
-  }
+  },
+  "styles": [
+    "node_modules/flowbite/dist/flowbite.css",
+    "src/styles.scss",
+    "src/styles.css"
+
+  ]
 }
