--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "ngx-perfect-scrollbar": "10.0.1",
     "ngx-print": "1.2.0-beta.2",
     "ngx-quill": "^13.2.0",
-    "ngx-toastr": "12.0.0",
+    "ngx-toastr": "^13.2.1",
     "nouislider": "14.6.2",
     "npm-install-peers": "^1.2.1",
     "popper.js": "1.16.1",
@@ -88,6 +88,5 @@
     "node_modules/flowbite/dist/flowbite.css",
     "src/styles.scss",
     "src/styles.css"
-
   ]
 }
