--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "11.0.5",
     "@angular/cdk": "^16.0.3",
     "@angular/compiler": "11.0.5",
     "@angular/core": "11.0.5",
     "@angular/forms": "11.0.5",
     "@angular/http": "7.2.16",
     "@angular/localize": "^11.0.5",
-    "@angular/material": "^16.0.3",
     "@angular/platform-browser": "11.0.5",
     "@angular/platform-browser-dynamic": "11.0.5",
     "@angular/router": "11.0.5",
@@ -38,7 +38,8 @@
     "dropzone": "5.7.2",
     "flowbite": "^1.6.5",
     "fullcalendar": "5.3.2",
-    "jquery": "^1.9.1",
+    "jquery": "^1.12.4",
+    "jquery-ui-dist": "^1.13.2",
     "list.js": "1.5.0",
     "mobius1-selectr": "2.4.13",
     "ngx-bootstrap": "6.0.0",
