--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -31,6 +31,12 @@ jobs:
       - name: Run Unit Tests
         run: npm run ci:test
         
+      - name: Clean Distribution Directory
+        run: npm run ci:clean
+        
+      - name: Build Application
+        run: npm run ci:build
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
 
